[hui] Fix file-picker overflow

--- a/hide_hl/res/ui/style/hui-file-picker.less
+++ b/hide_hl/res/ui/style/hui-file-picker.less
@@ -4,6 +4,7 @@ hui-file-picker {
 	fill-width: true;
 	cursor: button;
 	padding: 0 3 0 3;
+	overflow: hidden;
 
 	> hui-text {
 		valign: middle;
